force-app/main/default/objects/Document_Question__c/Document_Question__c.object-meta.xml
<CustomObject>
    <label>Document Question</label>
    <nameField>
        <label>Document Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>