force-app/main/default/objects/Document_Question__c/fields/Onboarding_Document__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Document__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Onboarding Document</label>
    <referenceTo>Onboarding_Document__c</referenceTo>
    <relationshipLabel>Document Questions</relationshipLabel>
    <relationshipName>Document_Questions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>