force-app/main/default/objects/Document_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <formula>Onboarding_Question__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Text</label>
    <type>Text</type>
</CustomField>